# math-exercise-generator

./: .gitignore  .mypy.ini  Makefile  Procfile  README.md  pyproject.toml  requirements.txt
docs/: urls
math_execrcise/: Makefile  manage.py  mypy.ini
math_execrcise/math_execrcise/: asgi.py  settings.py  urls.py  wsgi.py
math_execrcise/polls/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
math_execrcise/polls/migrations/: 0001_initial.py  0002_auto_20200815_2223.py  0003_auto_20200815_2227.py
math_execrcise/sheets/: admin.py  apps.py  models.py  question_sheet.py  urls.py  views.py
math_execrcise/sheets/fixture/: algorythms.json  questions.json
math_execrcise/sheets/migrations/: 0002_auto_20200822_2316.py  0005_remove_question_action.py  0006_auto_20200822_2359.py  0008_remove_question_params_text.py  0009_auto_20200823_0017.py  0010_auto_20200823_0023.py  0011_auto_20200823_1200.py  0012_auto_20200824_2103.py  0013_auto_20200906_1447.py  0014_auto_20201031_0842.py  0015_auto_20201031_0906.py  0020_question_style.py  0021_load_fixture.py  9000_load_fixture.py
math_execrcise/templates/admin/: base_site.html
math_exercise/: .gitignore  Makefile  manage.py  mypy.ini
math_exercise/math_exercise/: asgi.py  local_settings.py.example  settings.py  urls.py  wsgi.py
math_exercise/sheets/: admin.py  models.py  question_sheet.py  questions.py  tests.py  urls.py  views.py
math_exercise/sheets/fixture/: questions.json
math_exercise/sheets/migrations/: 0001_initial.py  0002_auto_20200822_2316.py  0020_question_style.py  (+23 more)
sketch/: Makefile
sketch/src/: questions.py  util.py
src/: example.py  questions.py  util.py
(+35 files in other folders)
