[tool.poetry]
name = "math-exercise-app"
version = "0.1.0"
description = ""
authors = ["u-masao <4973920+u-masao@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.1"
flake8 = "^3.8.3"
black = "^19.10b0"
mypy = "^0.782"
reportlab = "^3.5.47"
numpy = "^1.20.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
