[tool.poetry]
name = "math-exercise-app"
version = "0.1.0"
description = ""
authors = ["u-masao <4973920+u-masao@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
django = "^3.1"
reportlab = "^3.5.47"
numpy = "1.26.4"
dj-database-url = "^0.5.0"
django-heroku = "^0.3.1"
gunicorn = "^20.1.0"
click = "8.0.2"
qrcode = "^7.4.2"
Pillow = "^9.4.0"

[poetry.group.dev.dependencies]
isort = "^5.10.1"
flake8 = "^4.0.1"
black = "^21.12b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
