[tool.poetry]
name = "math-exercise-app"
version = "0.1.0"
description = ""
authors = ["u-masao <4973920+u-masao@users.noreply.github.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
django = "^3.1"
reportlab = "^3.5.47"
numpy = "1.26.4"
dj-database-url = "^0.5.0"
django-heroku = "^0.3.1"
gunicorn = "^20.1.0"
click = "8.0.2"
qrcode = "^7.4.2"
Pillow = "^9.4.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
flake8 = "^7.1.1"
black = "^24.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
